{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 378,
  "lineage": "cb96966e-4f63-c94b-9510-d813198937f6",
  "resources": [
    {
      "mode": "data",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.98.127.209",
            "id": "projects/redes-demo-2022-353122/global/addresses/static-ip",
            "name": "static-ip",
            "project": "redes-demo-2022-353122",
            "self_link": "https://www.googleapis.com/compute/v1/projects/redes-demo-2022-353122/global/addresses/static-ip",
            "status": "RESERVED"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/redes-demo-2022-353122/regions/us-east1/instanceGroups/web-manager",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "cdn_policy": [
              {
                "cache_mode": "CACHE_ALL_STATIC",
                "client_ttl": 3600,
                "default_ttl": 3600,
                "max_ttl": 86400,
                "negative_caching": true,
                "serve_while_stale": 86400,
                "signed_url_cache_max_age_sec": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2022-06-12T16:22:54.929-07:00",
            "enable_cdn": true,
            "fingerprint": "KwJ1d-ECEog=",
            "health_checks": [
              "projects/redes-demo-2022-353122/global/healthChecks/lb-hc"
            ],
            "id": "projects/redes-demo-2022-353122/global/backendServices/ilb-backend-subnet",
            "load_balancing_scheme": "EXTERNAL",
            "name": "ilb-backend-subnet",
            "port_name": "my-port",
            "project": "redes-demo-2022-353122",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/redes-demo-2022-353122/global/backendServices/ilb-backend-subnet",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_health_check.default",
            "google_compute_health_check.tcp-health-check",
            "google_compute_instance_template.web",
            "google_compute_network.vpc_network",
            "google_compute_region_instance_group_manager.web",
            "google_compute_subnetwork.subnet-priv-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allowhc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-06-12T16:21:40.452-07:00",
            "deny": [],
            "description": "allow Google health checks and network load balancers access",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/redes-demo-2022-353122/global/firewalls/allowhc-firewall",
            "log_config": [],
            "name": "allowhc-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/redes-demo-2022-353122/global/networks/vpc-network",
            "priority": 1000,
            "project": "redes-demo-2022-353122",
            "self_link": "https://www.googleapis.com/compute/v1/projects/redes-demo-2022-353122/global/firewalls/allowhc-firewall",
            "source_ranges": [
              "130.211.0.0/22",
              "209.85.152.0/22",
              "209.85.204.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-hc"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "weblb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-06-12T16:21:41.517-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/redes-demo-2022-353122/global/firewalls/web-fw-lb-allow-ssh-http",
            "log_config": [],
            "name": "web-fw-lb-allow-ssh-http",
            "network": "https://www.googleapis.com/compute/v1/projects/redes-demo-2022-353122/global/networks/vpc-network",
            "priority": 1000,
            "project": "redes-demo-2022-353122",
            "self_link": "https://www.googleapis.com/compute/v1/projects/redes-demo-2022-353122/global/firewalls/web-fw-lb-allow-ssh-http",
            "source_ranges": [
              "34.98.127.209/32"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "web-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_compute_global_address.default",
            "google_compute_global_address.default",
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.98.127.209",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-06-12T16:21:28.638-07:00",
            "id": "projects/redes-demo-2022-353122/global/addresses/static-ip",
            "name": "static-ip",
            "prefix_length": 0,
            "project": "redes-demo-2022-353122",
            "self_link": "https://www.googleapis.com/compute/v1/projects/redes-demo-2022-353122/global/addresses/static-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "forwarding",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/redes-demo-2022-353122/global/forwardingRules/website-forwarding-rule",
            "ip_address": "projects/redes-demo-2022-353122/global/addresses/static-ip",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "website-forwarding-rule",
            "port_range": "80",
            "project": "redes-demo-2022-353122",
            "self_link": "https://www.googleapis.com/compute/v1/projects/redes-demo-2022-353122/global/forwardingRules/website-forwarding-rule",
            "target": "projects/redes-demo-2022-353122/global/targetHttpProxies/lb-target-http-proxy"
          },
          "dependencies": [
            "google_compute_backend_bucket.ice-cream-bucket",
            "google_compute_backend_service.backend",
            "google_compute_global_address.default",
            "google_compute_health_check.default",
            "google_compute_health_check.tcp-health-check",
            "google_compute_instance_template.web",
            "google_compute_network.vpc_network",
            "google_compute_region_instance_group_manager.web",
            "google_compute_subnetwork.subnet-priv-1",
            "google_compute_target_http_proxy.default",
            "google_compute_url_map.default",
            "google_storage_bucket.ice-cream-bucket"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/redes-demo-2022-353122/global/networks/vpc-network",
            "mtu": 1460,
            "name": "vpc-network",
            "project": "redes-demo-2022-353122",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/redes-demo-2022-353122/global/networks/vpc-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet-priv-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-12T16:21:41.003-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/redes-demo-2022-353122/regions/us-east1/subnetworks/subnet-priv-1",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "subnet-priv-1",
            "network": "https://www.googleapis.com/compute/v1/projects/redes-demo-2022-353122/global/networks/vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "redes-demo-2022-353122",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "192.168.10.0/24",
                "range_name": "tf-test-secondary-range-update1"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/redes-demo-2022-353122/regions/us-east1/subnetworks/subnet-priv-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-12T16:23:20.239-07:00",
            "id": "projects/redes-demo-2022-353122/global/targetHttpProxies/lb-target-http-proxy",
            "name": "lb-target-http-proxy",
            "project": "redes-demo-2022-353122",
            "proxy_bind": false,
            "proxy_id": 3461951425658735495,
            "self_link": "https://www.googleapis.com/compute/v1/projects/redes-demo-2022-353122/global/targetHttpProxies/lb-target-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/redes-demo-2022-353122/global/urlMaps/lb-url-map"
          },
          "dependencies": [
            "google_compute_backend_bucket.ice-cream-bucket",
            "google_compute_backend_service.backend",
            "google_compute_health_check.default",
            "google_compute_health_check.tcp-health-check",
            "google_compute_instance_template.web",
            "google_compute_network.vpc_network",
            "google_compute_region_instance_group_manager.web",
            "google_compute_subnetwork.subnet-priv-1",
            "google_compute_url_map.default",
            "google_storage_bucket.ice-cream-bucket"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-12T16:23:18.032-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/redes-demo-2022-353122/global/backendBuckets/ice-cream-backend-bucket",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "JWzicpuzEKo=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "*"
                ],
                "path_matcher": "allpaths"
              }
            ],
            "id": "projects/redes-demo-2022-353122/global/urlMaps/lb-url-map",
            "map_id": 6120109292198284169,
            "name": "lb-url-map",
            "path_matcher": [
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/redes-demo-2022-353122/global/backendBuckets/ice-cream-backend-bucket",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "allpaths",
                "path_rule": [
                  {
                    "paths": [
                      "/api",
                      "/api/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/redes-demo-2022-353122/global/backendServices/ilb-backend-subnet",
                    "url_redirect": []
                  },
                  {
                    "paths": [
                      "/bucket",
                      "/bucket/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/redes-demo-2022-353122/global/backendBuckets/ice-cream-backend-bucket",
                    "url_redirect": []
                  }
                ],
                "route_rules": []
              }
            ],
            "project": "redes-demo-2022-353122",
            "self_link": "https://www.googleapis.com/compute/v1/projects/redes-demo-2022-353122/global/urlMaps/lb-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_bucket.ice-cream-bucket",
            "google_compute_backend_service.backend",
            "google_compute_health_check.default",
            "google_compute_health_check.tcp-health-check",
            "google_compute_instance_template.web",
            "google_compute_network.vpc_network",
            "google_compute_region_instance_group_manager.web",
            "google_compute_subnetwork.subnet-priv-1",
            "google_storage_bucket.ice-cream-bucket"
          ]
        }
      ]
    }
  ]
}